--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ config/credentials.yml.enc
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+/config/credentials/production.key
+
+/config/credentials/production/nano.key
